# mouse-codes

./: .gitignore  Cargo.toml  README.md  README.zh.md
docs/: ask.for.ai.md
examples/: automated_testing.rs  basic_usage.rs  config_system.rs  cross_platform_app.rs  game_input.rs
src/: error.rs  lib.rs  utils.rs
src/mapping/: custom.rs  mod.rs  standard.rs
src/mapping/standard/: hashmap_impl.rs  mod.rs  phf_impl.rs
src/parser/: mod.rs
src/types/: button.rs  code_mapper.rs  event.rs  mod.rs  platform.rs
